--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "mongodb": "^3.0.0-rc0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
